shared/scenarios/cilium-l7-policy/manifests/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scenario-cilium-l7
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: scenario-cilium-l7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: scenario-cilium-l7
spec:
  selector:
    app: api
  ports:
    - port: 80
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: api-l7-policy
  namespace: scenario-cilium-l7
spec:
  endpointSelector:
    matchLabels:
      app: api
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: client
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: "/api/.*"
